# cacca

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: interact.yml  interaction.yml  lint.yml  test.yml
docs/: getting-started.md  hello-toilet.md  index.md  installation.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  styles.css
scripts/: build.sh  code.install.sh  code.uninstall.sh  publish.npm.sh  publish.pypi.sh  setup.sh  tests.sh
src/cacca/: __init__.py  cli.py  constants.py  helpers.py  lib.py  node.py  playground.py  stubs.py
src/cacca/types/: __init__.py  generics.py  layers.py
tests/: constants.py  fixtures.py  lib.py
