[project]
name = "cacca"
version = "0.1.1"
description = "A cumulative hierarchy framework, easy as shit."
authors = [
    {name = "Airscript", email = "francesco@airscript.it"},
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=5.13.2",
]

[project.scripts]
cacca = "cacca.cli:main"
