[project]
name = "cacca"
version = "0.1.1"
description = "A cumulative hierarchy framework, easy as shit."
authors = [
    {name = "Airscript", email = "francesco@airscript.it"},
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=5.13.2",
    "pylint>=2.17.5",
    "black>=23.9.1",
    "pyright>=1.1.326",
    "isort>=5.12.0",
    "pytest>=7.4.2",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ""
testpaths = ["tests/lib.py"]
python_classes = "*Suite"
python_functions = "tfn*"

[project.scripts]
cacca = "cacca.cli:main"
